--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,17 @@
     <version>1.0-SNAPSHOT</version>
 
     <dependencies>
+        <!-- FastDFS -->
         <dependency>
             <groupId>net.oschina.zcx7878</groupId>
             <artifactId>fastdfs-client-java</artifactId>
             <version>1.27.0.0</version>
+        </dependency>
+        <!-- FastJSON -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.51</version>
         </dependency>
     </dependencies>
 
