--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>com.zhangbin</groupId>
     <artifactId>zbtool-common</artifactId>
     <version>1.0.1</version>
-    <description>文件上传</description>
+    <description>自写的工具类包，此版本新增集成Okhttp</description>
     <dependencies>
         <!-- FastDFS -->
         <dependency>
