--- a/pom.xml
+++ b/pom.xml
@@ -6,37 +6,54 @@
 
     <groupId>com.zhangbin</groupId>
     <artifactId>zbtool-common</artifactId>
-    <version>1.0.1</version>
+    <version>${project.version}</version>
     <description>自写的工具类包，此版本新增集成Okhttp</description>
 
+    <properties>
+        <!-- 设置编码 -->
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <project.version>1.0.2</project.version>
+        <project.artifactId>zbtool-common</project.artifactId>
+        <!-- JDK版本 -->
+        <java.version>1.8</java.version>
+        <!-- mvn编译版本 -->
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+    </properties>
     <dependencies>
         <!-- FastDFS -->
         <dependency>
             <groupId>net.oschina.zcx7878</groupId>
             <artifactId>fastdfs-client-java</artifactId>
             <version>1.27.0.0</version>
+            <scope>compile</scope>
         </dependency>
         <!-- FastJSON -->
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
             <version>1.2.51</version>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.mybatis</groupId>
             <artifactId>mybatis</artifactId>
             <version>3.4.5</version>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
             <version>1.2.12</version>
+            <scope>compile</scope>
         </dependency>
         <!-- 网络框架 -->
         <dependency>
             <groupId>com.squareup.okhttp3</groupId>
             <artifactId>okhttp</artifactId>
             <version>3.3.0</version>
+            <scope>compile</scope>
         </dependency>
         <!-- JWT -->
         <dependency>
@@ -47,30 +64,15 @@
         </dependency>
     </dependencies>
 
-    <properties>
-        <!-- 设置编码 -->
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <!-- JDK版本 -->
-        <java.version>1.8</java.version>
-        <!-- mvn编译版本 -->
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
-    </properties>
 
-    <distributionManagement>
-        <!-- 发布到快照版本的仓库，即测试版本仓库 -->
-        <snapshotRepository>
-            <id>snapshots</id>
-            <url>http://120.24.205.42:8081/repository/maven-snapshots/</url>
-        </snapshotRepository>
-        <!-- 发布到发行版本的仓库中，即正式版本仓库 -->
-        <repository>
-            <id>releases</id>
-            <url>http://120.24.205.42:8081/repository/maven-releases/</url>
-        </repository>
-    </distributionManagement>
+
     <build>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+            </resource>
+        </resources>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
