--- a/pom.xml
+++ b/pom.xml
@@ -6,46 +6,8 @@
 
     <groupId>com.zhangbin</groupId>
     <artifactId>zbtool-common</artifactId>
-    <version>DB-1.0.0</version>
+    <version>1.0.1-db</version>
     <description>关于Mybatis的工具分支</description>
-
-    <dependencies>
-        <!-- FastDFS -->
-        <dependency>
-            <groupId>net.oschina.zcx7878</groupId>
-            <artifactId>fastdfs-client-java</artifactId>
-            <version>1.27.0.0</version>
-        </dependency>
-        <!-- FastJSON -->
-        <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>fastjson</artifactId>
-            <version>1.2.51</version>
-        </dependency>
-        <dependency>
-            <groupId>org.mybatis</groupId>
-            <artifactId>mybatis</artifactId>
-            <version>3.4.5</version>
-        </dependency>
-        <dependency>
-            <groupId>log4j</groupId>
-            <artifactId>log4j</artifactId>
-            <version>1.2.12</version>
-        </dependency>
-        <!-- 网络框架 -->
-        <dependency>
-            <groupId>com.squareup.okhttp3</groupId>
-            <artifactId>okhttp</artifactId>
-            <version>3.3.0</version>
-        </dependency>
-        <!-- JWT -->
-        <dependency>
-            <groupId>io.jsonwebtoken</groupId>
-            <artifactId>jjwt</artifactId>
-            <version>0.9.0</version>
-            <scope>provided</scope>
-        </dependency>
-    </dependencies>
 
     <properties>
         <!-- 设置编码 -->
@@ -56,20 +18,30 @@
         <!-- mvn编译版本 -->
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
+        <fastjson.version>2.0.32</fastjson.version>
+        <mybatis.version>3.4.5</mybatis.version>
+        <log4j.version>1.2.12</log4j.version>
     </properties>
 
-    <distributionManagement>
-        <!-- 发布到快照版本的仓库，即测试版本仓库 -->
-        <snapshotRepository>
-            <id>snapshots</id>
-            <url>http://120.24.205.42:8081/repository/maven-snapshots/</url>
-        </snapshotRepository>
-        <!-- 发布到发行版本的仓库中，即正式版本仓库 -->
-        <repository>
-            <id>releases</id>
-            <url>http://120.24.205.42:8081/repository/maven-releases/</url>
-        </repository>
-    </distributionManagement>
+    <dependencies>
+        <!-- FastJSON -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>${fastjson.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.mybatis</groupId>
+            <artifactId>mybatis</artifactId>
+            <version>${mybatis.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>${log4j.version}</version>
+        </dependency>
+    </dependencies>
+
     <build>
         <plugins>
             <plugin>
