--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,11 @@
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
     <dependencies>
+        <dependency>
+            <groupId>com.zhangbin</groupId>
+            <artifactId>zbtool-common</artifactId>
+            <version>1.0.2</version>
+        </dependency>
         <!-- 网络框架 -->
         <dependency>
             <groupId>com.squareup.okhttp3</groupId>
