--- a/pom.xml
+++ b/pom.xml
@@ -7,14 +7,13 @@
     <groupId>com.zhangbin</groupId>
     <artifactId>zbtool-common</artifactId>
     <version>${project.version}</version>
-    <description>自写的工具类包，此版本新增集成Okhttp</description>
+    <description>自写的工具类包</description>
 
     <properties>
         <!-- 设置编码 -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <project.version>1.0.2</project.version>
-        <project.artifactId>zbtool-common</project.artifactId>
         <!-- JDK版本 -->
         <java.version>1.8</java.version>
         <!-- mvn编译版本 -->
@@ -37,22 +36,9 @@
             <scope>compile</scope>
         </dependency>
         <dependency>
-            <groupId>org.mybatis</groupId>
-            <artifactId>mybatis</artifactId>
-            <version>3.4.5</version>
-            <scope>compile</scope>
-        </dependency>
-        <dependency>
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
             <version>1.2.12</version>
-            <scope>compile</scope>
-        </dependency>
-        <!-- 网络框架 -->
-        <dependency>
-            <groupId>com.squareup.okhttp3</groupId>
-            <artifactId>okhttp</artifactId>
-            <version>3.3.0</version>
             <scope>compile</scope>
         </dependency>
         <!-- JWT -->
@@ -63,8 +49,6 @@
             <scope>provided</scope>
         </dependency>
     </dependencies>
-
-
 
     <build>
         <resources>
