--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.zhangbin</groupId>
+    <groupId>pers.zhangbin</groupId>
     <artifactId>zbtool-common</artifactId>
     <version>${project.version}</version>
     <description>自写的工具类包</description>
