--- a/pom.xml
+++ b/pom.xml
@@ -22,9 +22,9 @@
     </properties>
     <dependencies>
         <dependency>
-            <groupId>com.zhangbin</groupId>
+            <groupId>pers.zhangbin</groupId>
             <artifactId>zbtool-common</artifactId>
-            <version>1.0.2</version>
+            <version>2.0.0</version>
         </dependency>
         <!-- 网络框架 -->
         <dependency>
