--- a/pom.xml
+++ b/pom.xml
@@ -24,9 +24,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.zhangbin</groupId>
+            <groupId>pers.zhangbin</groupId>
             <artifactId>zbtool-common</artifactId>
-            <version>1.0.2</version>
+            <version>2.0.0</version>
         </dependency>
         <dependency>
             <groupId>org.mybatis</groupId>
