--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.zhangbin</groupId>
+    <groupId>pers.zhangbin</groupId>
     <artifactId>zbtool-net</artifactId>
     <version>1.0.0-net</version>
     <description>自写的工具类包，此版本新增集成Okhttp</description>
